<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_base_alpha="0.7"
            app:shimmer_colored="true">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/place_holder_layout" />

                <include layout="@layout/place_holder_layout" />

                <include layout="@layout/place_holder_layout" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/popularLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/populerKitaplar"
                    android:textColor="@color/tab_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/populerTumunugor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tumunuGor"
                    android:textColor="@color/tumunu_gor"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_id2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab2Kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kategoriler"
                    android:textColor="@color/tab_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/kategoriTumunugor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tumunuGor"
                    android:textColor="@color/tumunu_gor"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_category_tab2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mainEncokadi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enCokOkunanlar"
                    android:textColor="@color/tab_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/encokokunanlarTumu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tumunuGor"
                    android:textColor="@color/tumunu_gor"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/encokProgressTab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_encok_tab2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/mainListeadi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/populerListeler"
                    android:textColor="@color/tab_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/listeTumunugor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tumunuGor"
                    android:textColor="@color/tumunu_gor"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/listelerProgressTab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_listeler_tab2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/tab2ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="gone" />


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>