<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_sheet_tile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbardetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/reklamDetails"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="top"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"

                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:transitionName="imageTransition" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:orientation="vertical">

                            <com.lb.auto_fit_textview.AutoResizeTextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:maxLines="3"
                                android:textColor="@color/tab_color"
                                android:textSize="100sp"
                                android:textStyle="bold"
                                android:transitionName="titleTransition" />

                            <com.lb.auto_fit_textview.AutoResizeTextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:textColor="@color/tab_color"
                                android:textSize="17sp" />

                            <com.lb.auto_fit_textview.AutoResizeTextView
                                android:id="@+id/textViewCategory"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/turuncu"
                                android:textColorLink="@color/tab_color"
                                android:textSize="12sp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearIndir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <LinearLayout
                            android:id="@+id/relativeLayout1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/my_border">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="0.3"
                                android:textAlignment="center" />
                            <!--  <com.google.android.material.button.MaterialButton
                                  android:id="@+id/containedButton"
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  app:icon="@drawable/arrow_down"
                                  style="@style/Widget.MaterialComponents.Button.Icon"
                                  android:textColor="@color/blue_50"
                                  android:layout_gravity="center"
                                  android:layout_weight="0.5"
                                  android:clickable="true"
                                  android:focusable="true"
                                  android:maxLines="1"
                                  android:minWidth="120dp"
                                  android:text="@string/indir"
                                  />-->
                            <androidx.appcompat.widget.AppCompatButton

                                android:id="@+id/button5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="0.5"
                                android:clickable="true"
                                android:focusable="true"
                                android:maxLines="1"
                                android:minWidth="120dp"
                                android:text="İNDİR"
                                android:visibility="visible" />

                            <com.like.LikeButton
                                android:id="@+id/like_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="0.3"
                                app:anim_scale_factor="3"
                                app:circle_start_color="@color/colorPrimary"
                                app:icon_type="heart"
                                app:is_enabled="true"
                                app:liked="false" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/detail_read_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ozet"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
                <!-- <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                 android:clipToPadding="true"
                 android:layout_gravity="bottom"
                     android:background="#deb887"

                 android:fillViewport="true"> -->
                <!--   android:fadeScrollbars="false" -->
                <LinearLayout
                    android:id="@+id/detail_description_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/kahverengi_yorum_arka"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <org.sufficientlysecure.htmltextview.HtmlTextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:maxLines="4"
                            android:textIsSelectable="true"
                            android:textSize="14sp" />

                        <View
                            android:id="@+id/gradient"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_gravity="center_horizontal|bottom" />
                    </FrameLayout>

                    <LinearLayout
                        android:id="@+id/daha_fazlaLinear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/daha_fazla"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/dahaFazla"
                            android:textSize="15sp"
                            android:textStyle="italic" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_expand_more_black_24dp" />
                    </LinearLayout>
                </LinearLayout>
                <!--   </ScrollView> -->
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/yorumlarText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/yorumlar"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <mehdi.sakout.fancybuttons.FancyButton
                        android:id="@+id/yorumlarTumu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        fancy:fb_defaultColor="@color/turuncu_2"
                        fancy:fb_focusColor="#9bd823"
                        fancy:fb_radius="20dp"
                        fancy:fb_text="@string/tumuYorumYap"
                        fancy:fb_textColor="#FFFFFF" />
                    <!-- <TextView
                         android:id="@+id/yorumlarTumu"
                         android:clickable="true"
                         android:visibility="gone"
                         android:text="@string/t_m_yorum_yap"
                         android:textSize="18sp"
                         android:gravity="end"
                         android:textStyle="italic|bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:focusable="true" />-->


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_id_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/kahverengi_yorum_arka"></androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:id="@+id/author_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:text="@string/yazarinDigerKitaplari"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <mehdi.sakout.fancybuttons.FancyButton
                            android:id="@+id/btn_tumu_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="5dp"
                            fancy:fb_defaultColor="@color/turuncu_2"
                            fancy:fb_focusColor="#9bd823"
                            fancy:fb_radius="30dp"
                            fancy:fb_text="@string/tumu"
                            fancy:fb_textColor="#FFFFFF" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview_id_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/kahverengi_yorum_arka"
                        android:visibility="invisible"></androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:gravity="center"
                        android:text="@string/Yükleniyor"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reklamDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="3dp"
        android:orientation="vertical"
        android:visibility="visible"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>